--- a/aspPay/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/aspPay/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -20,8 +20,12 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li><a href="/Admin/Pages">Pages</a></li>
+                    <li><a href="/Admin/Pages/EditSidebar">Sidebar</a></li>
+                </ul>
+                <ul class="nav navbar-nav">
                     <li><a href="/" class="navbar-brand" target="_blank">AspPay</a></li>
-                </ul>c
+                </ul>
             </div>
         </div>
     </div>
